--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nikhil - Portfolio</title>
     <link rel="stylesheet" href="00navbar.css" />
     <link rel="stylesheet" href="01home.css" />
     <link rel="stylesheet" href="02projects.css" />
