--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
       </form>
     </div>
   </body>
-  <script>
+<!--   <script>
     document
       .getElementById("contact-form")
       .addEventListener("submit", function (event) {
@@ -339,5 +339,5 @@
         alert("Message sent successfully! ✅");
         this.reset(); // Clears the form fields
       });
-  </script>
+  </script> -->
 </html>
